Checkpoint, we got webGL 2.0 working and windows OpenGL3.3 working with DLL API.

--- a/tools/index.html
+++ b/tools/index.html
@@ -46,6 +46,6 @@
             }
         };
     </script>
-    <script src="SimpleGameExample.js"></script>
+    <script src="ComputeShaderExample.js"></script>
 </body>
 </html>
